# mite-bench

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml
mite/: __init__.py  compare.py  evaluation.py  models.py
mite/tasks/: __init__.py  advice_relevance.py  answer_quality.py  base.py  claim_verification.py  entailment_interaction.py
paper/: mite_paper.tex  references.bib
results/: fever_experiment.json  sick_r_expanded.json  sick_r_experiment.json  summeval_experiment.json
scripts/: compare_rankings.py  generate_figures.py  run_expanded.py  run_experiment.py  run_fever_summeval.py  run_fever_summeval_fast.py  run_mite.py  run_mteb_baseline.py
