[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mite-bench"
version = "0.1.0"
description = "MITE: Massive Interaction Task Evaluation — benchmarking embeddings on interaction tasks that MTEB misses"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "MITE Contributors"},
]
keywords = ["embeddings", "benchmark", "NLP", "interaction", "compatibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
api = [
    "openai>=1.0.0",
    "voyageai>=0.2.0",
    "cohere>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/mite-bench/mite-bench"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"

[tool.setuptools.packages.find]
include = ["mite*"]

[tool.ruff]
line-length = 100
target-version = "py310"
